# media-compliance-ai

./: .env.example  .gitattributes  README.md  main.py  pyproject.toml  streamlit_app.py  test_auditor.py
azure_functions/: README.md
backend/scripts/: index_documents.py
backend/src/api/: server.py  telemetry.py
backend/src/graph/: nodes.py  state.py  workflow.py
backend/src/services/: video_indexer.py
tests/: test_auditor.py
