[project]
name = "media-compliance-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "azure-identity>=1.25.1",
    "azure-monitor-opentelemetry>=1.6.0",
    "azure-search-documents>=11.6.0",
    "azure-storage-blob>=12.27.1",
    "fastapi>=0.115.0",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-openai>=0.2.0",
    "langgraph>=0.2.0",
    "langsmith>=0.1.0",
    "pydantic>=2.0.0",
    "pypdf>=4.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.32.0",
    "streamlit>=1.40.0",
    "uvicorn>=0.30.0",
    "yt-dlp>=2025.1.12",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
